--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Jushwin Notu</title>
+  <title>Jushwin M</title>
 
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   
