--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     </div>
   </div> <!-- End Portfolio page -->
   
-  <!-- Testimonial -->
+  <!-- Testimonial 
   <div class="vg-page page-testimonial">
     <div class="container">
       <h1 class="text-center fw-normal wow fadeInUp">What Clients are Saying</h1>
@@ -415,7 +415,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- End testimonial -->
+  </div> End testimonial -->
   
   <!-- Client -->
   <div class="vg-page page-client">
