--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <li class="nav-item">
               <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
+            </li>-->
             <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
@@ -75,7 +75,7 @@
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
-      <h1 class="fw-light mb-4">I'm <b class="fg-theme">JUSHIWN M</b></h1>
+      <h1 class="fw-light mb-4">I'm <b class="fg-theme">JUSHWIN M</b></h1>
       <div class="badge">UI/UX & Web Developer</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
@@ -358,7 +358,7 @@
     </div>
   </div> <!-- End Portfolio page -->
   
-  <!-- Testimonial 
+  <!-- Testimonial
   <div class="vg-page page-testimonial">
     <div class="container">
       <h1 class="text-center fw-normal wow fadeInUp">What Clients are Saying</h1>
