--- a/index.html
+++ b/index.html
@@ -346,11 +346,11 @@
           </div>
         </div>
         <div class="grid-item shopify ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-6.png" data-fancybox data-caption="<h5 class='fg-theme'>Wordpress</h5> <p>Charity website</p>">
+          <div class="img-place" data-src="assets/img/work/work-6.png" data-fancybox data-caption="<h5 class='fg-theme'>shopify</h5> <p>E-commerce</p>">
             <img src="assets/img/work/work-6.png" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Wordpress</h5>
-              <p>Charity website</p>
+              <h5 class="fg-theme">Shopify</h5>
+              <p>E-commerce</p>
             </div>
           </div>
         </div>
