--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <div class="title">2024</div>
               <div class="details">
                 <h5>WEB DEVELOPMENT</h5>
-                <small class="fg-theme">REVANOID</small>
+                <a href="https://revanoid.com/v/" target="_blank"><small class="fg-theme">REVANOID</small></a>
                 <p>I attend WEB DEVELOPMENT internship in Revanoid Coimbatore.</p>
               </div>
             </li>
@@ -583,7 +583,7 @@
       </div>
       <div class="row justify-content-center mt-3">
         <div class="col-12">
-          <p class="text-center mb-0 mt-4">Copyright &copy;2024. All right reserved | Made with <a href="https://www.revanoid.com/"><span class="ti-heart fg-theme-red"></span></a> by <a href="https://www.macodeid.com/">Jushwin</a></p>
+          <p class="text-center mb-0 mt-4">Copyright &copy;2024. All right reserved | Made with <a href="https://www.revanoid.com/"><span class="ti-heart fg-theme-red"></span></a> by Jushwin</a></p>
           <p class="text-center mb-0 mt-4"></p>
         </div>
       </div>
