--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <div class="title">2024</div>
               <div class="details">
                 <h5>WEB DEVELOPMENT</h5>
-                <small class="fg-theme">REVANOID</small></a>
+                <a href="https://revanoid.com/v/" target="_blank"><small class="fg-theme">REVANOID</small></a>
                 <p>I attend WEB DEVELOPMENT internship in Revanoid Coimbatore.</p>
               </div>
             </li>
